--- a/execution.toml
+++ b/execution.toml
@@ -12,33 +12,33 @@ gas_limit = 0
 # Base fee in Wei
 base_fee = 0
 # Block number
-number = 0
+number = 14000000
 # Miner's Address
-coinbase = ""
+coinbase = "0x2b591e99afE9f32eAA6214f7B7629768c40Eeb39"
 
 [transaction]
 # From Address
-from = ""
+from = "0x0e3df4a1f586fb9f0007a59602d3b26a95337deb"
 # To Address
-to = ""
+to = "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45"
 # Transaction Data 
-calldata = ""
+calldata = "0x5bef4"
 # Value (in Wei)
 value = 0
 # Max gas to be used in TX
-gas_limit = 0
+gas_limit = 100000
 # Max wei per unit of gas
-gas_price = 0
+gas_price = 100000
 # If the transaction is only transfering ETH
 is_transfer_only = true
 # Transaction type
 type = 0
 # Signature
-sig = ""
+sig = "0x5e3cf"
 
 [[contracts]]
 address = "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
-bytecode = ""
+bytecode = "6001600101"
 balance = 0
 nonce = 0
 
