--- a/execution.toml
+++ b/execution.toml
@@ -1,41 +1,47 @@
-# TOML file containing the initial values that the EVM requires in order to run
+# File contain values necessary for the initialization of the EVM
 
+# Values relevant to the chain
 [chain]
+# Integer representing id of chain
 chain_id = 1
 
+# Values relevant to the block used during simulation
 [block]
-# UNIX TIME
+# Integer representing block time (in UNIX)
 timestamp = 0
+# Integer representing block difficulty
 difficulty = 0
-# Max Gas for block
+# Integer representing max gas to be used in block
 gas_limit = 0
-# Base fee in Wei
+# Integer representing base fee of any transaction (in Wei)
 base_fee = 0
-# Block number
+# Integer representing the block number
 number = 14000000
-# Miner's Address
+# String representing the address of the "miner"
 coinbase = "0x2b591e99afE9f32eAA6214f7B7629768c40Eeb39"
 
+# Values relevant to the transaction to be simulated
 [transaction]
-# From Address
+# Hex String representing address of transaction sender
 from = "0x0e3df4a1f586fb9f0007a59602d3b26a95337deb"
-# To Address
+# Hex String representing address of transaction recipient
 to = "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45"
-# Transaction Data 
+# Hex String representing calldata of transaction
 calldata = "0x5bef4"
-# Value (in Wei)
+# Integer representing value sent with transaction (in Wei)
 value = 0
-# Max gas to be used in TX
+# Integer repesenting the max amount of gas to be used in transaction
 gas_limit = 100000
-# Max wei per unit of gas
+# Integer representing the price per unit of gas in transaction (in Wei)
 gas_price = 100000
-# If the transaction is only transfering ETH
+# Boolean representing whether transaction only sends eth
 is_transfer_only = true
-# Transaction type
+# Integer representing the type of the transaction
 type = 0
-# Signature
+# Hex String representing the function signature of the transaction
 sig = "0x5e3cf"
 
+# Contracts to be locally imported into transaction
 [[contracts]]
 address = "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
 bytecode = "6001600101"
